@@ -1,0 +1,121 @@
+use utf8;
+package WomenInBotany::Schema::Result::Status;
+
+# Created by DBIx::Class::Schema::Loader
+# DO NOT MODIFY THE FIRST PART OF THIS FILE
+
+=head1 NAME
+
+WomenInBotany::Schema::Result::Status
+
+=cut
+
+use strict;
+use warnings;
+
+use Moose;
+use MooseX::NonMoose;
+use MooseX::MarkAsMethods autoclean => 1;
+extends 'DBIx::Class::Core';
+
+=head1 COMPONENTS LOADED
+
+=over 4
+
+=item * L<DBIx::Class::InflateColumn::DateTime>
+
+=item * L<DBIx::Class::TimeStamp>
+
+=item * L<DBIx::Class::PassphraseColumn>
+
+=item * L<DBIx::Class::InflateColumn::FS>
+
+=back
+
+=cut
+
+__PACKAGE__->load_components(
+  "InflateColumn::DateTime",
+  "TimeStamp",
+  "PassphraseColumn",
+  "InflateColumn::FS",
+);
+
+=head1 TABLE: C<status>
+
+=cut
+
+__PACKAGE__->table("status");
+
+=head1 ACCESSORS
+
+=head2 status_id
+
+  data_type: 'smallint'
+  extra: {unsigned => 1}
+  is_auto_increment: 1
+  is_nullable: 0
+
+=head2 sort
+
+  data_type: 'smallint'
+  is_nullable: 1
+
+=head2 name
+
+  data_type: 'varchar'
+  is_nullable: 1
+  size: 255
+
+=head2 active
+
+  data_type: 'tinyint'
+  default_value: 1
+  is_nullable: 1
+
+=head2 info
+
+  data_type: 'varchar'
+  is_nullable: 1
+  size: 255
+
+=cut
+
+__PACKAGE__->add_columns(
+  "status_id",
+  {
+    data_type => "smallint",
+    extra => { unsigned => 1 },
+    is_auto_increment => 1,
+    is_nullable => 0,
+  },
+  "sort",
+  { data_type => "smallint", is_nullable => 1 },
+  "name",
+  { data_type => "varchar", is_nullable => 1, size => 255 },
+  "active",
+  { data_type => "tinyint", default_value => 1, is_nullable => 1 },
+  "info",
+  { data_type => "varchar", is_nullable => 1, size => 255 },
+);
+
+=head1 PRIMARY KEY
+
+=over 4
+
+=item * L</status_id>
+
+=back
+
+=cut
+
+__PACKAGE__->set_primary_key("status_id");
+
+
+# Created by DBIx::Class::Schema::Loader v0.07039 @ 2014-09-08 11:26:42
+# DO NOT MODIFY THIS OR ANYTHING ABOVE! md5sum:ylVOIG99BjtYunlxEDfv/w
+
+
+# You can replace this text with custom code or comments, and it will be preserved on regeneration
+__PACKAGE__->meta->make_immutable;
+1;
