@@ -2,9 +2,13 @@ This file documents the revision history for Perl web application WomenInBotany.
 
 {{$NEXT}}
 
+    - table status added
+    - field for internal remarks in table botanists added
+
 0.13      2014-09-07 16:07:26+02:00 Europe/Berlin
 
-    - Authentication support via LDAP  
+    - authentication support via LDAP  
 
 0.01  2013-04-07 15:11:15+01:00 Europe/Berlin 
+
     - initial revision, generated by Catalyst
